# fastapi-motor-mongo-template

./: .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/: dependabot.yaml
.github/workflows/: automerge.yml  create-pr.yml
app/: main.py
app/api/: error_responses.py  health.py
app/api/v1/: sample_resource.py
app/common/: error.py  openapi.py  util.py
app/conf/: config.py  logging.py  logging.yaml
app/crud/: sample_resource.py
app/db/: db.py
app/models/: create_sample_resource.py  get_sample_resource.py  mongo_model.py  sample_resource_common.py
app/schemas/: get_sample_resource.py  mongo_model.py  sample_resource.py  sample_resource_common.py
frontend/static/: style.css
tests/: conftest.py  mongo_client.py  test_create_sample_resource.py  test_delete_sample_resource.py  test_get_sample_resource.py  test_health.py  test_update_sample_resource.py
tests/mock_data/: sample_resource.json
